# twilly

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yaml  quality-assessment.yaml
scripts/: install_darwin.sh  install_linux.sh
src/: lib.rs  main.rs
twilio_cli/: Cargo.toml  README.md
twilio_cli/src/: account.rs  conversation.rs  lib.rs  main.rs
twilio_rust/: Cargo.toml
twilio_rust/src/: account.rs  conversation.rs  lib.rs
twilly/: Cargo.toml  README.md
twilly/src/: account.rs  conversation.rs  lib.rs  participant_conversation.rs  serverless.rs  sync.rs
twilly/src/serverless/: environments.rs  services.rs
twilly/src/serverless/environments/: logs.rs
twilly/src/sync/: documents.rs  listitems.rs  lists.rs  mapitems.rs  maps.rs  services.rs
twilly_cli/: Cargo.toml  README.md
twilly_cli/src/: account.rs  conversation.rs  lib.rs  main.rs  serverless.rs  sync.rs
twilly_cli/src/serverless/: environments.rs
twilly_cli/src/serverless/environments/: logs.rs
twilly_cli/src/sync/: documents.rs  listitems.rs  lists.rs  mapitems.rs  maps.rs
