[package]
name = "twilio_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilio_rust = { path = "../twilio_rust" }
inquire = { version = "0.6.2", features = ["date"] }
chrono = "0.4.31"
strum = "0.25.0"
strum_macros = "0.25"
confy = "0.6.0"
