[package]
name = "twilly_cli"
version = "0.0.3"
edition = "2021"
description = "A CLI tool for interacting the Twilio API built upon the twilly crate"
authors = ["Tristan Blackwell"]
repository = "https://github.com/TristanBlackwell/twilly"
homepage = "https://github.com/TristanBlackwell/twilly"
documentation = "https://docs.rs/twilly_cli"
readme = "README.md"
license = "MIT"
keywords = ["twilly", "twilio", "rust", "api", "reqwest"]
rust-version = "1.74.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilly = { path = "../twilly", version = "0.0.3" }
inquire = { version = "0.6.2", features = ["date"] }
chrono = "0.4.31"
strum = "0.26.1"
strum_macros = "0.26.1"
confy = "0.6.0"
openssl = { version = "0.10", features = ["vendored"] }
